infrastructure/kubernetes/manifests/renderred/environments-staging/openkruise/MutatingWebhookConfiguration/kruise-mutating-webhook-configuration.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  annotations:
    template: ""
  labels:
    app.kubernetes.io/managed-by: Helmraiser
    app.tanka.grafana.com: openkruise
  name: kruise-mutating-webhook-configuration
webhooks:
  - admissionReviewVersions:
      - v1
      - v1beta1
    clientConfig:
      service:
        name: kruise-webhook-service
        namespace: kruise-system
        path: /mutate-pod
    failurePolicy: Fail
    name: mpod.kb.io
    namespaceSelector:
      matchExpressions:
        - key: control-plane
          operator: NotIn
          values:
            - openkruise
        - key: kubernetes.io/metadata.name
          operator: NotIn
          values:
            - kube-system
    rules:
      - apiGroups:
          - ""
        apiVersions:
          - v1
        operations:
          - CREATE
        resources:
          - pods
    sideEffects: None
    timeoutSeconds: 30
  - admissionReviewVersions:
      - v1
      - v1beta1
    clientConfig:
      service:
        name: kruise-webhook-service
        namespace: kruise-system
        path: /mutate-apps-kruise-io-v1alpha1-advancedcronjob
    failurePolicy: Fail
    name: madvancedcronjob.kb.io
    rules:
      - apiGroups:
          - apps.kruise.io
        apiVersions:
          - v1alpha1
        operations:
          - CREATE
          - UPDATE
        resources:
          - advancedcronjobs
    sideEffects: None
    timeoutSeconds: 30
  - admissionReviewVersions:
      - v1
      - v1beta1
    clientConfig:
      service:
        name: kruise-webhook-service
        namespace: kruise-system
        path: /mutate-apps-kruise-io-v1alpha1-broadcastjob
    failurePolicy: Fail
    name: mbroadcastjob.kb.io
    rules:
      - apiGroups:
          - apps.kruise.io
        apiVersions:
          - v1alpha1
        operations:
          - CREATE
          - UPDATE
        resources:
          - broadcastjobs
    sideEffects: None
    timeoutSeconds: 30
  - admissionReviewVersions:
      - v1
      - v1beta1
    clientConfig:
      service:
        name: kruise-webhook-service
        namespace: kruise-system
        path: /mutate-apps-kruise-io-v1alpha1-cloneset
    failurePolicy: Fail
    name: mcloneset.kb.io
    rules:
      - apiGroups:
          - apps.kruise.io
        apiVersions:
          - v1alpha1
        operations:
          - CREATE
          - UPDATE
        resources:
          - clonesets
    sideEffects: None
    timeoutSeconds: 30
  - admissionReviewVersions:
      - v1
      - v1beta1
    clientConfig:
      service:
        name: kruise-webhook-service
        namespace: kruise-system
        path: /mutate-apps-kruise-io-v1alpha1-containerrecreaterequest
    failurePolicy: Fail
    name: mcontainerrecreaterequest.kb.io
    rules:
      - apiGroups:
          - apps.kruise.io
        apiVersions:
          - v1alpha1
        operations:
          - CREATE
          - UPDATE
        resources:
          - containerrecreaterequests
    sideEffects: None
    timeoutSeconds: 30
  - admissionReviewVersions:
      - v1
      - v1beta1
    clientConfig:
      service:
        name: kruise-webhook-service
        namespace: kruise-system
        path: /mutate-apps-kruise-io-v1alpha1-daemonset
    failurePolicy: Fail
    name: mdaemonset.kb.io
    rules:
      - apiGroups:
          - apps.kruise.io
        apiVersions:
          - v1alpha1
        operations:
          - CREATE
          - UPDATE
        resources:
          - daemonsets
    sideEffects: None
    timeoutSeconds: 30
  - admissionReviewVersions:
      - v1
      - v1beta1
    clientConfig:
      service:
        name: kruise-webhook-service
        namespace: kruise-system
        path: /mutate-apps-kruise-io-v1alpha1-imagelistpulljob
    failurePolicy: Fail
    name: mimagelistpulljob.kb.io
    rules:
      - apiGroups:
          - apps.kruise.io
        apiVersions:
          - v1alpha1
        operations:
          - CREATE
          - UPDATE
        resources:
          - imagelistpulljobs
    sideEffects: None
    timeoutSeconds: 30
  - admissionReviewVersions:
      - v1
      - v1beta1
    clientConfig:
      service:
        name: kruise-webhook-service
        namespace: kruise-system
        path: /mutate-apps-kruise-io-v1alpha1-imagepulljob
    failurePolicy: Fail
    name: mimagepulljob.kb.io
    rules:
      - apiGroups:
          - apps.kruise.io
        apiVersions:
          - v1alpha1
        operations:
          - CREATE
          - UPDATE
        resources:
          - imagepulljobs
    sideEffects: None
    timeoutSeconds: 30
  - admissionReviewVersions:
      - v1
      - v1beta1
    clientConfig:
      service:
        name: kruise-webhook-service
        namespace: kruise-system
        path: /mutate-apps-kruise-io-v1alpha1-nodeimage
    failurePolicy: Fail
    name: mnodeimage.kb.io
    rules:
      - apiGroups:
          - apps.kruise.io
        apiVersions:
          - v1alpha1
        operations:
          - CREATE
          - UPDATE
        resources:
          - nodeimages
    sideEffects: None
    timeoutSeconds: 30
  - admissionReviewVersions:
      - v1
      - v1beta1
    clientConfig:
      service:
        name: kruise-webhook-service
        namespace: kruise-system
        path: /mutate-apps-kruise-io-v1alpha1-sidecarset
    failurePolicy: Fail
    name: msidecarset.kb.io
    rules:
      - apiGroups:
          - apps.kruise.io
        apiVersions:
          - v1alpha1
        operations:
          - CREATE
          - UPDATE
        resources:
          - sidecarsets
    sideEffects: None
    timeoutSeconds: 30
  - admissionReviewVersions:
      - v1
      - v1beta1
    clientConfig:
      service:
        name: kruise-webhook-service
        namespace: kruise-system
        path: /mutate-apps-kruise-io-statefulset
    failurePolicy: Fail
    name: mstatefulset.kb.io
    rules:
      - apiGroups:
          - apps.kruise.io
        apiVersions:
          - v1alpha1
          - v1beta1
        operations:
          - CREATE
          - UPDATE
        resources:
          - statefulsets
    sideEffects: None
    timeoutSeconds: 30
  - admissionReviewVersions:
      - v1
      - v1beta1
    clientConfig:
      service:
        name: kruise-webhook-service
        namespace: kruise-system
        path: /mutate-apps-kruise-io-v1alpha1-uniteddeployment
    failurePolicy: Fail
    name: muniteddeployment.kb.io
    rules:
      - apiGroups:
          - apps.kruise.io
        apiVersions:
          - v1alpha1
        operations:
          - CREATE
          - UPDATE
        resources:
          - uniteddeployments
    sideEffects: None
    timeoutSeconds: 30
